# claude-picker

./: .gitignore  BREW-TAP.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  claude-picker  demo-mockup-before.sh  demo-mode-stats.sh  demo.tape  demo.webm  dist-workspace.toml  export.webm  hero.webm  install.sh  stats.webm  uninstall.sh
.github/workflows/: release.yml
assets/: README.md  extract-frames.sh  generate.sh
assets/ai-generated/: INVENTORY.md  README.md
assets/videos/: bookmarks.webm  diff.webm  search.webm  stats.webm  tree.webm
brand/: brand.md  concepts.md  gemini-prompts.md
content/: USAGE.md  image-prompts.md  instagram-linkedin.md  launch-playbook.md  medium-article.md  reddit-hackernews-warp.md  twitter-thread.md
lib/: session-bookmarks.py  session-diff.py  session-export.py  session-list.py  session-list.sh  session-picker-tui.py  session-picker-tui.tcss  session-preview.py  session-search.py  session-stats.py  session-tree.py
prototype-tui/: README.md  requirements.txt
scripts/: README.md  demo-mockup-projects.sh  demo-mockup-sessions.sh  demo-mode-diff.sh  demo-mode-search.sh  demo-mode-stats.sh  demo-mode-tree.sh  demo-mode-tui.sh  demo-mode.sh
scripts/capture/imagegen/: README.md  prompt_full_banner.txt
scripts/capture/tapes/: 01-hero-v06.tape
scripts/tapes/: README.md  bookmarks.tape  diff.tape  export.tape  hero.tape  search.tape  stats.tape  tree.tape
skill/: claude-picker.md
src/: app.rs  completions.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  resume.rs  theme.rs
src/commands/: ai_titles_cmd.rs  audit_cmd.rs  checkpoints_cmd.rs  diff_cmd.rs  doctor_cmd.rs  export_cmd.rs  files_cmd.rs  hooks_cmd.rs  latest_cmd.rs  mcp_cmd.rs  mod.rs  pick.rs  pipe_cmd.rs  prompt_cmd.rs  search_cmd.rs  stats_cmd.rs  tree_cmd.rs
src/data/: ai_summarize.rs  anomaly.rs  bookmarks.rs  budget.rs  chains.rs  checkpoints.rs  claude_json_cache.rs  clipboard.rs  cost_audit.rs  editor.rs  file_index.rs  marks.rs  mcp_calls.rs  mod.rs  path_resolver.rs  pinned_projects.rs  pricing.rs  project.rs  redact.rs  replay.rs  search_filters.rs  session.rs  session_rename.rs  settings.rs  task_queue.rs  tool_dist.rs  transcript.rs
src/ui/: actions.rs  audit.rs  audit_detail.rs  breadcrumb.rs  checkpoints.rs  command_palette.rs  conversation_viewer.rs  diff.rs  files.rs  filter_ribbon.rs  footer.rs  fx.rs  heatmap.rs  help_overlay.rs  hooks.rs  interesting_moments.rs  layout.rs  masthead.rs  mcp.rs  mod.rs  model_pill.rs  model_simulator.rs  onboarding.rs  picker.rs  preview.rs  project_heatmap.rs  project_list.rs  rename_modal.rs  replay.rs  search.rs  session_list.rs  stats.rs  subagent_tree.rs  task_drawer.rs  text.rs  thumbnail.rs  thumbnail_cache.rs  timestamp_fmt.rs  tree.rs  which_key.rs
tapes/: bookmarks.tape  diff.tape  export.tape  hero.tape  search.tape  stats.tape  tree.tape
tests/: audit_heuristics.rs  data_tests.rs  diff_tests.rs  file_index_tests.rs  inspect_tool_dist.rs  pricing_accuracy_tests.rs  search_tests.rs  stats_tests.rs  transcript_tests.rs  tree_tests.rs
tests/fixtures/: sample.jsonl
warp/: claude_picker.toml
website/: README.md  index.html  netlify.toml  robots.txt  script.js  sitemap.xml  style.css  vercel.json
