[package]
name = "claude-picker"
version = "0.2.2"
edition = "2021"
rust-version = "1.86"
authors = ["Anshul Garg"]
description = "Terminal session manager for Claude Code — browse, preview, and resume sessions with per-model cost tracking."
license = "MIT"
repository = "https://github.com/anshul-garg27/claude-picker"
homepage = "https://github.com/anshul-garg27/claude-picker"
keywords = ["claude", "claude-code", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "claude-picker"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"
# Fuzzy matching
nucleo = "0.5"
# Theme
catppuccin = { version = "2.4", features = ["ratatui"] }
# CLI
clap = { version = "4.5", features = ["derive"] }
# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Errors
anyhow = "1.0"
thiserror = "1.0"
# Dirs
dirs = "5.0"
# Regex
regex = "1.10"
# Clipboard — cross-platform, no X11 deps on macOS. Used for `y`/`Y` copy shortcuts.
arboard = "3"
# Config file parsing for ~/.config/claude-picker/config.toml.
toml = "0.8"
# Unicode display width (terminal columns). `.len()` / `.chars().count()` both
# lie about column count — CJK / emoji / accented chars trip them. The crate is
# already a transitive dep through ratatui, but we want an explicit version
# we can depend on by name.
unicode-width = "0.2"
# Grapheme-boundary-safe iteration for truncation. Also a transitive dep
# through ratatui; pinned here so the call sites can `use` it directly.
unicode-segmentation = "1.12"
# LCS / Myers-style diff for word-level inline diffs. Pure Rust so it works
# everywhere ratatui does; used by `ui::diff`'s word-mode rendering.
similar = "2.6"

[dev-dependencies]
insta = "1.39"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
