[package]
name = "claude-picker"
version = "0.3.0"
edition = "2021"
rust-version = "1.86"
authors = ["Anshul Garg"]
description = "Terminal session manager for Claude Code — browse, preview, and resume sessions with per-model cost tracking."
license = "MIT"
repository = "https://github.com/anshul-garg27/claude-picker"
homepage = "https://github.com/anshul-garg27/claude-picker"
keywords = ["claude", "claude-code", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "claude-picker"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"
# Fuzzy matching
nucleo = "0.5"
# Theme
catppuccin = { version = "2.4", features = ["ratatui"] }
# CLI
clap = { version = "4.5", features = ["derive"] }
# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Errors
anyhow = "1.0"
thiserror = "1.0"
# Dirs
dirs = "5.0"
# Regex
regex = "1.10"
# Clipboard — cross-platform, no X11 deps on macOS. Used for `y`/`Y` copy shortcuts.
arboard = "3"
# Config file parsing for ~/.config/claude-picker/config.toml.
toml = "0.8"
# Unicode display width (terminal columns). `.len()` / `.chars().count()` both
# lie about column count — CJK / emoji / accented chars trip them. The crate is
# already a transitive dep through ratatui, but we want an explicit version
# we can depend on by name.
unicode-width = "0.2"
# Grapheme-boundary-safe iteration for truncation. Also a transitive dep
# through ratatui; pinned here so the call sites can `use` it directly.
unicode-segmentation = "1.12"
# LCS / Myers-style diff for word-level inline diffs. Pure Rust so it works
# everywhere ratatui does; used by `ui::diff`'s word-mode rendering.
similar = "2.6"
# Image rendering in the terminal (kitty / iTerm2 / Sixel / halfblocks) for the
# F2/E17 project-thumbnail strip. `ratatui-image` wraps the protocol probe and
# widget; `image` is its low-level pixel buffer. Version check against crates.io
# on 2026-04-17:
# - ratatui-image: latest stable is 10.0.6 (2026-02-19). The spec pinned "1"
#   but the crate is on the 10.x major as of spring 2026 — we take the bump.
#   The API we rely on (Picker::from_query_stdio / new_resize_protocol /
#   StatefulImage / StatefulProtocol::last_encoding_result) exists on 10.x.
# - image: latest stable is 0.25.10 (2026-03-10). Pinning to "0.25" resolves
#   to the current patch automatically.
# If the terminal doesn't support any graphics protocol, the picker probe
# falls back to halfblocks which we render ourselves — see `ui::thumbnail`.
ratatui-image = "10"
image = "0.25"
# Shader-style effects + animations for ratatui. Powers the Horizon 3
# "wow factor" touches (F1 fork-graph radial expansion, F3 session pulse
# HUD, F4 replay comet trail, F5 peek-mode slide).
#
# Version pin rationale: crates.io max_stable_version is 0.25.0 (Feb 27
# 2026), but the 0.11 → 0.25 line all depend on ratatui 0.29 via
# ratatui-core 0.1 — incompatible with this crate's `ratatui = "0.28"`
# pin (the two ratatui versions ship distinct `Color` types so the
# `Into<Color>` bounds on tachyonfx's fx constructors won't resolve).
# tachyonfx 0.7.0 is the newest release that depends on ratatui 0.28.1
# directly. Until we bump ratatui → 0.29 project-wide, 0.7 is the
# compatible pin. The public API (fade_from / fade_to / slide_in / etc.)
# is functionally equivalent to 0.25 for the features this patch uses —
# the main differences are `Direction` (0.7) vs `Motion` (0.25) and the
# `fx::RadialPattern` path, both accounted for in `src/ui/fx.rs`.
tachyonfx = "0.7"

[dev-dependencies]
insta = "1.39"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
